# catstat

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  docs.yml  release.yml
benchmarks/: README.md  __init__.py  compare_results.py  datasets.py  eval_numeric.py  ledger.py  run_benchmarks.py
benchmarks/results/: 2026-06-26-T4-gpu-parity.jsonl  2026-06-26-numeric-te-eval.json  2026-06-27-T4-gpu-parity.jsonl  2026-06-27-transform-gather.jsonl  2026-07-02-T4-gpu-parity.jsonl  2026-07-02-b0-table-kernel.jsonl  baseline-cpu.json  ledger.jsonl
docs/: experiment_log.md  known_issues.md  next-session-prompt.md  publishing_checklist.md  roadmap.md
docs/notes/: 2026-06-26-numeric-te-prior-art.md  2026-06-27-cuml-vs-sklearn-te-levers.md
docs/proposals/: claude-md-proposal.md  evaluation-harness-design.md  self-improvement-loop-design.md  skills-proposal.md  target-encoder-library-design.md
docs/verdicts/: 2026-06-26-api-docs-verdict.md  2026-06-26-check-estimator-subset-verdict.md  2026-06-26-ci-pytest-pythonpath-verdict.md  2026-06-26-gpu-parity-report.md  (+24 more)
examples/: binary_classification_basic.py  count_frequency_basic.py  multiclass_classification_basic.py  numeric_target_encoding.py  regression_basic.py  stats_and_smoothing.py
scripts/: build_docs.sh  check.sh  colab_gpu_parity.py  colab_gpu_parity.sh  colab_gpu_tests.py  summarize_benchmark_results.py
tests/: conftest.py  test_additive_fast_path.py  test_backend.py  test_check_estimator.py  test_count_frequency.py  test_cpu_gpu_parity.py  test_cross_fit_no_leakage.py  test_determinism.py  test_device_input.py  test_feature_names.py  test_interactions.py  test_io_types.py  test_joint_codes.py  test_laplace_frequency.py  test_max_classes.py  test_multi_feature.py  test_numeric_encoding.py  test_phase3.py  test_polars.py  test_scheme.py  test_shape_stats.py  test_sigmoid_smoothing.py  test_sklearn_auto_parity.py  test_sklearn_compat.py  test_stats.py  test_target_encoder_binary.py  test_target_encoder_multiclass.py  test_target_encoder_regression.py  test_transform_gather.py  test_unknown_missing.py  test_woe.py
(+21 files in other folders)
